# ppke-scipy-example_package

./: README.md  pyproject.toml  setup.py
example_package/: doing_stuff.py
