[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package"
version = "0.0"
authors = [
  { name="Krist처f M체ller"},
  { name="You"},
]
maintainers = [
  { name="Krist처f M체ller", email = "muller.kristof@itk.ppke.hu"},
]
description = "An example package"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.25.2",
    "matplotlib>=3.6.2"
]

[project.urls]
Homepage = "http://your-git.com"
Documentation = "http://your-readthedocs.com"
Repository = "http://your-git.git"
Issues = "http://your-git.com/issues"

[tool.setuptools]
packages = ["example_package"]